Possible fix for link element clipping behind elements it's not supposed to

--- a/src/Stylesheets/_Header.scss
+++ b/src/Stylesheets/_Header.scss
@@ -31,6 +31,7 @@
 		right: 0;
 		padding: 10px 0 10px;
 		background-color: white;
+		z-index: 1;
 		& > * {
 			margin: 0 5px;
 			background-clip: border-box;
